--- a/playbook.yml
+++ b/playbook.yml
@@ -1,36 +1,26 @@
 ---
-- name: Install Java and Cassandra on Ubuntu
+- name: Install Cassandra on Ubuntu 22
   hosts: all
-  become: yes
-  tasks:
-    - name: Update apt package list
-      apt:
-        update_cache: yes
+  become: true
 
-    - name: Install OpenJDK 8
+  tasks:
+    - name: Install Java OpenJDK 8
       apt:
         name: openjdk-8-jdk
         state: present
+        update_cache: yes
 
     - name: Add Cassandra repository
-      lineinfile:
-        path: /etc/apt/sources.list.d/cassandra.sources.list
-        line: "deb https://debian.cassandra.apache.org 41x main"
-        state: present
+      shell: echo "deb https://debian.cassandra.apache.org 41x main" | tee -a /etc/apt/sources.list.d/cassandra.sources.list
 
     - name: Import Cassandra repository signing key
-      apt_key:
-        url: https://downloads.apache.org/cassandra/KEYS
-        state: present
-
-    - name: Update apt package list again after adding repo
-      apt:
-        update_cache: yes
+      shell: curl https://downloads.apache.org/cassandra/KEYS | apt-key add -
 
     - name: Install Cassandra
       apt:
         name: cassandra
         state: present
+        update_cache: yes
 
     - name: Start Cassandra service
       systemd:
@@ -38,7 +28,4 @@
         state: started
         enabled: yes
 
-    - name: Check status of Cassandra service
-      systemd:
-        name: cassandra
-        state: started
+
