--- a/playbook.yml
+++ b/playbook.yml
@@ -1,14 +1,16 @@
 ---
-- name: Install Cassandra on Ubuntu 22
+- name: Install Java and Cassandra on Ubuntu
   hosts: all
-  become: true
-
+  become: yes
   tasks:
-    - name: Install Java OpenJDK 8
+    - name: Update apt package list
+      apt:
+        update_cache: yes
+
+    - name: Install OpenJDK 8
       apt:
         name: openjdk-8-jdk
         state: present
-        update_cache: yes
 
     - name: Add Cassandra repository
       shell: echo "deb https://debian.cassandra.apache.org 41x main" | tee -a /etc/apt/sources.list.d/cassandra.sources.list
@@ -16,11 +18,14 @@
     - name: Import Cassandra repository signing key
       shell: curl https://downloads.apache.org/cassandra/KEYS | apt-key add -
 
+    - name: Update apt package list again after adding repo
+      apt:
+        update_cache: yes
+
     - name: Install Cassandra
       apt:
         name: cassandra
         state: present
-        update_cache: yes
 
     - name: Start Cassandra service
       systemd:
@@ -28,4 +33,9 @@
         state: started
         enabled: yes
 
+    - name: Check status of Cassandra service
+      systemd:
+        name: cassandra
+        state: started
 
+                                
